# splitlyV2

./: LICENSE  README.md  journal.md
Code/: Cargo.toml  keyboard.toml  memory.x  vial.json
Code/.cargo/: config.toml
Code/src/: main.rs
PCB/: splitly.kicad_pcb  splitly.kicad_pro  splitly.kicad_sch
PCB/production/: netlist.ipc
