[package]
name = "splitly-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
rmk = { version = "0.7", features = ["nrf52840_ble", "split"] }

embassy-executor = { version = "0.7", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }

embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

embassy-nrf = { version = "0.3", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = false
opt-level = 1

[[bin]]
name = "splitly-v2"
path = "src/main.rs"
